--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+body{
+  font-family: 'Karla', sans-serif;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.container{
+display: grid;
+justify-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  padding:1.5rem 0;
+  background-image: linear-gradient(90deg,#672280 1.18%, #A626D3 100%);
+}
+
+
+.logo{
+  margin-left: 1.5rem;
+}
+
+main{
+  padding: 2rem;
+}
+
+form{
+  /* width: 500px; */
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+  font-family: 'Karla', sans-serif;
+}
+
+
+
+.input{
+  font-family: 'Karla', sans-serif;
+  border: 1px solid #D5D4D8;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.btn{
   color: white;
+  background-image: linear-gradient(90deg,#672280 1.18%, #A626D3 100%);
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: 700;
+  font-family: 'Karla', sans-serif;
+  grid-column: 1/-1;
+  height: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:hover{
+cursor: pointer;
+  opacity: 0.8;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img {
+  width: 260px;
+  margin-top: 2rem;
+}
+
+.img-container {
+  display: grid;
+  justify-content: center;
 }
